--- a/core/apps/projects/templates/projects/item/full_title.html
+++ b/core/apps/projects/templates/projects/item/full_title.html
@@ -3,12 +3,12 @@
         <span class="icon">
             <i class="{{ item.icon }}"></i>
         </span>
-        <span>[{{ item.shortcut }}]</span>
+        <span>[#{{ item.shortcut }}]</span>
     </span>
     {% if item.subtasks.all %}
-        <span class="icon">
-            <i class="fas fa-tasks"></i>
-        </span>
+    <span class="icon">
+        <i class="fas fa-tasks"></i>
+    </span>
     {% endif %}
 </a>
 {% if item.status and item.status == item.DONE %}
