Display bug fixes

--- a/core/apps/projects/templates/projects/item/full_title.html
+++ b/core/apps/projects/templates/projects/item/full_title.html
@@ -1,4 +1,4 @@
-<a href="{{ item.get_edit_url }}" class="has-text-{{ item.color }}">
+<a class="has-text-{{ item.color }} modal-button" data-target="{{ item.shortcut }}">
     <span class="icon-text">
         <span class="icon">
             <i class="{{ item.icon }}"></i>
