--- a/core/apps/projects/templates/projects/item/extra_links.html
+++ b/core/apps/projects/templates/projects/item/extra_links.html
@@ -1,6 +1,3 @@
-{% if item.description or item.subtasks.all %}
-{% include "projects/modal/description.html" %}
-{% endif %}
 {% if item.epics.all %}
 <span class="icon-text has-text-grey-lighter">
     <span class="icon">
@@ -15,5 +12,10 @@
         <i class="fas fa-bookmark"></i>
     </span>
     <span>{{ item.issues.count }}</span>
+</span>
+{% endif %}
+{% if item.description %}
+<span class="icon has-text-grey-lighter">
+    <i class="fas fa-comment"></i>
 </span>
 {% endif %}
