Add space between issue cards and link target to _blank

--- a/core/apps/projects/templates/projects/modal/description.html
+++ b/core/apps/projects/templates/projects/modal/description.html
@@ -41,7 +41,7 @@
             {% endif %}
         </section>
         <footer class="modal-card-foot">
-            <a href="{{ item.get_edit_url }}" class="button is-success">{% trans 'Change' %}</a>
+            <a href="{{ item.get_edit_url }}" class="button is-success" target="_blank">{% trans 'Change' %}</a>
             <button class="button modal-button" data-target="{{ item.shortcut }}">{% trans 'Close' %}</button>
         </footer>
     </div>
