Display bug correction

--- a/core/apps/projects/templates/projects/modal/description.html
+++ b/core/apps/projects/templates/projects/modal/description.html
@@ -18,7 +18,7 @@
             <br>
             {% if item.description %}
             <p class="is-italic has-text-weight-bold">Description:</p>
-            <p class="content">{{ item.description_html|safe }}</p>
+            <div class="content">{{ item.description_html|safe }}</div>
             <br>
             {% endif %}
 
